Changeed jupyter script

--- a/Fruit-Classification.ipynb
+++ b/Fruit-Classification.ipynb
@@ -47,20 +47,20 @@
     "shape = (100,100)  \n",
     "train_path = 'Data/train'\n",
     "\n",
-    "for filename in os.listdir(train_path):\n",
-    "    if filename.split('.')[1] == 'jpg':\n",
-    "        img = cv2.imread(os.path.join(train_path,filename))\n",
-    "        \n",
-    "        try:\n",
-    "            # Resize all images to a specific shape\n",
-    "            img = cv2.resize(img,shape)\n",
+    "for foldername in os.listdir(train_path):\n",
+    "    for filename in os.listdir(train_path+\"/\"+foldername):\n",
+    "        if filename.split('.')[1] == 'jpg':\n",
+    "            img = cv2.imread(os.path.join(train_path+\"/\"+foldername,filename))\n",
+    "            try:\n",
+    "                # Resize all images to a specific shape\n",
+    "                img = cv2.resize(img,shape)\n",
+    "                \n",
+    "                # Spliting file names and storing the labels for image in list\n",
+    "                train_labels.append(foldername)\n",
     "\n",
-    "            # Spliting file names and storing the labels for image in list\n",
-    "            train_labels.append(filename.split('_')[0])\n",
-    "\n",
-    "            train_images.append(img)\n",
-    "        except:\n",
-    "            pass\n",
+    "                train_images.append(img)\n",
+    "            except:\n",
+    "                pass\n",
     "# Converting labels into One Hot encoded sparse matrix\n",
     "train_labels = pd.get_dummies(train_labels).values\n",
     "\n",
@@ -88,17 +88,18 @@
     "test_labels = []\n",
     "test_path = 'Data/test'\n",
     "\n",
-    "for filename in os.listdir(test_path):\n",
-    "    if filename.split('.')[1] == 'jpg':\n",
-    "        img = cv2.imread(os.path.join(test_path,filename))\n",
-    "        \n",
-    "        # Spliting file names and storing the labels for image in list\n",
-    "        test_labels.append(filename.split('_')[0])\n",
-    "        \n",
-    "        # Resize all images to a specific shape\n",
-    "        img = cv2.resize(img,shape)\n",
-    "        \n",
-    "        test_images.append(img)\n",
+    "for foldername in os.listdir(test_path):\n",
+    "    for filename in os.listdir(test_path+\"/\"+foldername):\n",
+    "        if filename.split('.')[1] == 'jpg':\n",
+    "            img = cv2.imread(os.path.join(test_path+\"/\"+foldername,filename))\n",
+    "\n",
+    "            # Spliting file names and storing the labels for image in list\n",
+    "            test_labels.append(foldername)\n",
+    "\n",
+    "            # Resize all images to a specific shape\n",
+    "            img = cv2.resize(img,shape)\n",
+    "\n",
+    "            test_images.append(img)\n",
     "# Converting test_images to array\n",
     "test_images = np.array(test_images)"
    ]
@@ -689,7 +690,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
